# pyclopse

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SPEC.md  TODOS.md  fastagent.config.yaml  fastagent.jsonl  install.sh  pyproject.toml
.github/workflows/: deploy.yml  publish.yml
docs/: ARCHITECTURE.md  FASTAGENT_FEATURES.md  GAP_ANALYSIS.md  JOBS.md  LOGGING.md  OPENCLAW_MIGRATION.md  SKILLS.md  TOOL_RESEARCH.md  VAULT.md  fastagent_fixes.md  sessions.md
examples/: agents.yaml  config.yaml  test_basic.py
pyclaw/: __init__.py  __main__.py
pyclaw/a2a/: __init__.py  executor.py  setup.py
pyclaw/agents/: __init__.py  acp_runner.py  factory.py  runner.py
pyclaw/api/: __init__.py  app.py  nodes.py
pyclaw/channels/: __init__.py  base.py  discord.py  googlechat.py  imessage.py  line.py  loader.py  plugin.py  signal.py  slack.py  telegram.py  whatsapp.py
pyclaw/config/: __init__.py  loader.py  schema.py
pyclaw/core/: __init__.py  agent.py  commands.py  compaction.py  concurrency.py  gateway.py  otel_store.py  prompt_builder.py  queue.py  router.py  session.py  usage.py  watcher.py
pyclaw/hooks/: __init__.py  events.py  loader.py  registry.py
pyclaw/jobs/: __init__.py  models.py  scheduler.py
pyclaw/memory/: __init__.py  backend.py  clawvault.py  client.py  embeddings.py  file_backend.py  service.py
pyclaw/plugins/: __init__.py  base.py  hooks.py  loader.py  loaders.py  registry.py  types.py
pyclaw/providers/: __init__.py  anthropic.py  fastagent.py  generic.py  minimax.py  openai.py
pyclaw/pulse/: __init__.py  models.py  runner.py
pyclaw/reflect/: __init__.py  (+2 more)
pyclawops/: __init__.py  __main__.py  _version.py
pyclopse/: __init__.py  __main__.py
scripts/: reinstall.sh  strip_history_tool_calls.py
tests/: test_acp_commands.py  test_acp_runner.py  test_allowlist.py  test_build_fa_settings.py  test_bundled_hooks.py  test_channel_plugin.py  test_commands.py  test_concurrency.py  test_config_api.py  test_config_schema.py  test_config_tools.py  test_dedup.py  test_discord_plugin.py  test_easy_win_commands.py  test_fa_model_settings.py  test_health_api.py  test_hook_events.py  test_hooks_api.py  test_job_commands.py  test_job_notify_routing.py  test_job_targeting.py  test_jobs_and_sessions.py  test_medium_commands.py  test_memory_file_backend.py  test_memory_reindex_tool.py  test_message_routing.py  test_message_splitting.py  test_model_fallback.py  test_new_commands.py  test_queue_modes.py  test_reflect_registry.py  test_secrets.py  test_self_api.py  test_self_loader.py  test_session_reaper.py  test_sessions_api.py  test_skills.py  test_slack_pulse.py  test_slack_threading.py  test_telegram_multibot.py  (+20 more)
(+520 files in other folders)
